# steam-playtime-docker

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  .readthedocs.yml  CHANGELOG.md  Dockerfile  LICENSE.md  README.md  pyproject.toml
.github/: renovate.json
.github/workflows/: ci-cd.yml  deploy-docs.yml  docker.yml  release-container.yml  verify_upstream.sh
app/: __init__.py  config.py  dependencies.py  error_handlers.py  exceptions.py  main.py  version.py
app/routers/: health.py  steam.py
app/schemas/: __init__.py  steam.py
app/services/: steam.py
docs/: conf.py  index.html  index.rst
scripts/: export_openapi.py
src/steam_playtime_docker/: __init__.py  main.py
tests/: __init__.py  conftest.py  test_api.py  test_startup.py  test_steam_service.py
