[project]
name = "steam-playtime-docker"
version = "1.4.3"
description = "Display playtime for Steam library."
readme = "README.md"
authors = [{ name = "MountainGod2", email = "admin@reid.ca" }]
requires-python = ">=3.12"
dependencies = [
    "aiohttp==3.13.5",
    "fastapi[standard]==0.136.3",
    "pydantic-settings==2.14.1",
    "uvicorn==0.47.0",
]

[build-system]
requires = ["hatchling==1.29.0", "hatch-fancy-pypi-readme==25.1.0"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyrefly==1.0.0",
    "ruff==0.15.14",
    "pre-commit==4.6.0",
    "python-semantic-release==10.5.3",
    "bandit[sarif,toml]==1.9.4",
]

[tool.hatch]
build.targets.wheel.packages = ["app"]
metadata.hooks.fancy-pypi-readme.content-type = "text/markdown"
metadata.hooks.fancy-pypi-readme.fragments = [{ path = "README.md" }]
metadata.hooks.fancy-pypi-readme.substitutions = [
    # Replace relative links in the README with absolute links to the GitHub repository
    { pattern = '\[(.+?)\]\(((?!https?://)\.?/?(\S+?))\)', replacement = '[\1](https://github.com/MountainGod2/steam-playtime-docker/tree/main/\g<3>)' },
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
build_command = """
  uv lock --upgrade-package "steam-playtime-docker"
  uv build
"""
commit_parser = "conventional"
changelog_file = "CHANGELOG.md"
output_format = "md"
commit_parser_options.minor_tags = ["feat"]
commit_parser_options.patch_tags = ["fix", "perf"]
commit_parser_options.parse_squash_commits = true
commit_parser_options.ignore_merge_commits = true
changelog.exclude_commit_patterns = [
    '''chore(?:\([^)]*?\))?: .+''',
    '''ci(?:\([^)]*?\))?: .+''',
    '''docs(?:\([^)]*?\))?: .+''',
    '''refactor(?:\([^)]*?\))?: .+''',
    '''style(?:\([^)]*?\))?: .+''',
    '''test(?:\([^)]*?\))?: .+''',
    '''build\((?!deps\): .+)''',
    '''Initial [Cc]ommit.*''',
]

[tool.ruff]
target-version = "py312"
line-length = 80
indent-width = 4
lint.preview = true
lint.select = ["ALL"]
lint.ignore = ["COM812", "CPY001"]
lint.unfixable = []
lint.pydocstyle.convention = "google"
format.preview = true
format.quote-style = "double"
format.indent-style = "space"
format.skip-magic-trailing-comma = false
format.line-ending = "auto"
lint.per-file-ignores."scripts/*" = [
    "INP001", # Allow missing __init__.py in scripts
    "T201",   # Allow print statements in scripts
]

[tool.bandit]
exclude_dirs = [".venv"]
