
[build-system]
requires = ["hatchling==1.31.0", "hatch-fancy-pypi-readme==25.1.0"]
build-backend = "hatchling.build"

[project]
name = "steam-playtime-docker"
version = "1.4.19"
description = "Display playtime for Steam library."
readme = "README.md"
authors = [{ name = "MountainGod2", email = "admin@reid.ca" }]
requires-python = ">=3.12"
dependencies = [
    "aiohttp==3.14.1",
    "fastapi[standard]==0.139.2",
    "pydantic-settings==2.14.2",
    "uvicorn==0.51.0",
]

[dependency-groups]
dev = [
    "pyrefly==1.1.1",
    "ruff==0.15.22",
    "pre-commit==4.6.0",
    "python-semantic-release==10.6.1",
    "bandit[sarif,toml]==1.9.4",
]
test = [
    "pytest==9.1.1",
    "pytest-cov==6.3.0",
    "anyio==4.14.2",
    "aioresponses-ng==0.8.2",
    "httpx2==2.7.0",
]

[tool.hatch]
build.targets.wheel.packages = ["app"]
metadata.hooks.fancy-pypi-readme.content-type = "text/markdown"
metadata.hooks.fancy-pypi-readme.fragments = [{ path = "README.md" }]
metadata.hooks.fancy-pypi-readme.substitutions = [
    # Replace relative links in the README with absolute links to the GitHub repository
    { pattern = '\[(.+?)\]\(((?!https?://)\.?/?(\S+?))\)', replacement = '[\1](https://github.com/MountainGod2/steam-playtime-docker/tree/main/\g<3>)' },
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
build_command = """
  uv lock --upgrade-package "steam-playtime-docker"
  uv build
"""
commit_parser = "conventional"
changelog_file = "CHANGELOG.md"
output_format = "md"
commit_parser_options.minor_tags = ["feat"]
commit_parser_options.patch_tags = ["fix", "perf"]
commit_parser_options.parse_squash_commits = true
commit_parser_options.ignore_merge_commits = true
changelog.exclude_commit_patterns = [
    '''chore(?:\([^)]*?\))?: .+''',
    '''ci(?:\([^)]*?\))?: .+''',
    '''docs(?:\([^)]*?\))?: .+''',
    '''refactor(?:\([^)]*?\))?: .+''',
    '''style(?:\([^)]*?\))?: .+''',
    '''test(?:\([^)]*?\))?: .+''',
    '''build\((?!deps\): .+)''',
    '''Initial [Cc]ommit.*''',
]

[tool.ruff]
target-version = "py312"
line-length = 80
indent-width = 4
lint.preview = true
lint.select = ["ALL"]
lint.ignore = ["missing-trailing-comma", "missing-copyright-notice"]
lint.unfixable = []
lint.pydocstyle.convention = "google"
format.preview = true
format.quote-style = "double"
format.indent-style = "space"
format.skip-magic-trailing-comma = false
format.line-ending = "auto"
lint.per-file-ignores."scripts/*" = [
    "implicit-namespace-package", # Allow missing __init__.py in scripts
    "print",                      # Allow print statements in scripts
]
lint.per-file-ignores."tests/*" = [
    "assert",                       # assert is the standard pytest assertion mechanism
    "undocumented-public-module",   # module docstrings are optional for test modules
    "undocumented-public-function", # public function docstrings are encouraged, not required
    "magic-value-comparison",       # magic values (status codes, counts) read fine in tests
    "private-member-access",        # tests reach into "private" state (app.state, caches)
]

[tool.bandit]
exclude_dirs = [".venv"]
assert_used.skips = ["*/test_*.py", "*/*_test.py"]

[tool.pytest]
ini_options.addopts = "--cov=app --cov-report=term-missing --cov-report=xml --strict-markers"
ini_options.testpaths = ["tests"]

[tool.coverage]
run.source = ["app"]
run.branch = true
report.show_missing = true
report.exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]
